--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,22 +1,26 @@
 <div class="quizz__container">
   <div class="quizz_logo">
     <img src="assets/imgs/logo.png" alt="">
-    <h3>Titulo</h3>
+    <h2>{{title}}</h2>
   </div>
 
-  <div class="quizz_questions">
-    <h3>questao selecionada</h3>
+  <div *ngIf=!finished class="quizz_questions">
+    <h3>{{questionSelected.question}}</h3>
   </div>
 
-  <div class="quizz_options">
-    <button class="btn-option">
-      optionname
+  <div *ngIf=!finished class="quizz_options">
+    <button
+      *ngFor="let option of questionSelected.options, let i = index"
+      (click)="playerChoose(option.alias)"
+      class="btn-option"
+    >
+     {{option.name}}
     </button>
   </div>
 
-  <div class="quizz_results">
-    <h1>O Seu retultado é:</h1>
-    <p>Resposta Selecionada</p>
+  <div *ngIf=finished class="quizz_results"><!--só mostra quando a questao for finalizada-->
+    <h4>O seu retultado é:</h4>
+    <p>{{answersSelected}}</p>
   </div>
 
 </div>
